# regtech

./: .gitignore  README.md  pyproject.toml
lxml_declaration/: CUESADCustomsRepresentative.py  DTSout_CU.py  ESADout_CU.py  ESADout_CUGoodsShipment.py  FilledPerson.py  GTDoutCustomsMark.py  base.py  main.py  mappers.py  wrapper_classes.py
xml-declaration/: CUESADCustomsRepresentative.py  DTSout_CU.py  main.py
xml_declaration/: CUESADCustomsRepresentative.py  DTSout_CU.py  ESADout_CU.py  ESADout_CUGoodsShipment.py  FilledPerson.py  GTDoutCustomsMark.py  base.py  main.py  mappers.py  wrapper_classes.py
